<resources>
    <string name="app_name">MPEIapp</string>
    <string name="logo_mpei">logo_mpei</string>
    <string name="contacts">Контакты</string>
    <string name="main_scene_text">Главная</string>
    <string name="title">ПРИЁМНАЯ КОМИССИЯ</string>
    <string name="start_time_text">Начало -</string>
    <string name="online_platform_text">Онлайн платформы</string>
    <string name="address">г. Москва, ул. Красноказарменная, д. 17 метро Авиамоторная</string>
    <string name="youtube">YouTube</string>
    <string name="vk">VK</string>
    <string name="title_info_event">Что вас ждёт?</string>
    <string name="building_icon">building_icon</string>
    <string name="getting_to_know">Знакомство с универститетом</string>
    <string name="education_icon">education_icon</string>
    <string name="education_text">Участие в мастер-классах</string>
    <string name="info_icon">info_icon</string>
    <string name="info_event_text">Презентации институтов, входящие в состав НИУ “МЭИ”</string>
    <string name="excursion_icon">excursion_icon</string>
    <string name="excursion_text">Экскурсии в лаборатории, общежития и военный учебный центр</string>
    <string name="go_to_schedule_text">График проведения “дня открытых дверей” уточняй <u>здесь</u></string>
    <string name="button_back_to_registr">button back to registr</string>
    <string name="schedule">График проведения</string>
    <string name="offline_schedule_10_11">Открытие. Встреча гостей в холле первого этажа. Получение маршрутного листа гостя. Начало работы демонстрационной зоны.</string>
    <string name="schedule_text_1100_1145">Приветствие гостей в Большом актовом зале, показательные выступления учеников центра подготовки и переподготовки «Институт развития самбо им. А.А. Харлампиева»</string>
    <string name="schedule_text_12_14">Первая экскурсионная сессия: помещения институтов</string>
    <string name="schedule_text_1410_1540">Вторая экскурсионная сессия: общежития и Военный учебный центр.</string>
    <string name="schedule_text_online_1100_1145">Прямое включение из Большого актового зала. Показательные выступления учеников центра подготовки и переподготовки «Институт развития самбо им. А.А. Харлампиева»</string>
    <string name="schedule_text_online_1145_1245">Трансляция видеороликов о Национальном исследовательском университете МЭИ и институтах входящих в его состав.</string>
    <string name="cd_time_icon">time_icon</string>
    <string name="schedule_morning">10:00 (очно)</string>
    <string name="schedule_11_00">11:00 (онлайн)</string>
    <string name="cd_calendar_icon">cd_calendar_icon</string>
    <string name="cd_btn_to_registr">button for registration</string>
    <string name="cd_location_icon">location_icon</string>
    <string name="full_time">Очно</string>
    <string name="cd_online_icon">online_icon</string>
    <string name="cd_btn_info_event">btn_info_event</string>
    <string name="cd_btn_check_video">btn_check_video</string>
    <string name="cd_background_item">background_item</string>
    <string name="Contacts">Контакты</string>
    <string name="telegram">Telegram</string>
    <string name="vk_string">Вконтакте</string>
    <string name="our_site">Наш сайт</string>
    <string name="mobile">Телефон</string>
    <string name="mobile_priem_com">+7 (495) 362–77–77</string>
    <string name="email_text">почта</string>
    <string name="email_priem_com">PK@mpei.ru</string>
    <string name="eventTitle">Дни открытых дверей</string>
    <string name="olympiadTitle">Олимпиады</string>
    <string name="image_for_olympiad">image_for_olympiad</string>

    <string-array name="type_event">
        <item>Очный формат</item>
        <item>Онлайн-формат</item>
    </string-array>
</resources>